--- a/macro-config.json
+++ b/macro-config.json
@@ -6,7 +6,7 @@
             "read_mesh_name": "macro-mesh",
             "read_data_name": ["k_00", "k_01", "k_10", "k_11", "porosity"],
             "write_mesh_name": "macro-mesh",
-            "write_data_name": "grain-radius"
+            "write_data_name": "temperature"
     },
     "simulation_params": {
       "total_time": 0.2,
