--- a/micro-manager-config.json
+++ b/micro-manager-config.json
@@ -6,11 +6,11 @@
             "write_mesh_name": "macro-mesh",
             "write_data_name": ["k_00", "k_01", "k_10", "k_11", "porosity"],
             "read_mesh_name": "macro-mesh",
-            "read_data_name": "temperature"
+            "read_data_name": ["temperature"]
     },
     "simulation_params": {
       "total_time": 0.5,
-      "timestep": 1.0E-2,
+      "timestep": 1.0E-1,
       "t_output": 0.1
     }
   }
