--- a/micro-manager-config.json
+++ b/micro-manager-config.json
@@ -9,6 +9,7 @@
             "read_data_name": ["temperature"]
     },
     "simulation_params": {
+      "macro_domain_bounds": [0.0, 1.0, 0.0, 1.0],
       "total_time": 0.002,
       "timestep": 0.001,
       "t_output": 0.001
