[WIP] Adding functionality that Micro Manager can be pointed to correct micro problem script via config

--- a/micro-manager-config.json
+++ b/micro-manager-config.json
@@ -1,4 +1,5 @@
 {
+    "micro_file_name": "micro_sim/micro_dummy",
     "coupling_on": true,
     "coupling_params": {
             "participant_name": "Micro-manager",
