--- a/micro-manager-dummy-config.json
+++ b/micro-manager-dummy-config.json
@@ -1,4 +1,5 @@
 {
+    "micro_file_name": "micro_dummy",
     "coupling_on": true,
     "coupling_params": {
             "participant_name": "Micro-manager",
