Removing unused code

--- a/macro-micro-dummy/micro-manager-dummy-config.json
+++ b/macro-micro-dummy/micro-manager-dummy-config.json
@@ -2,7 +2,7 @@
     "micro_file_name": "micro_dummy",
     "coupling_on": true,
     "coupling_params": {
-            "participant_name": "Micro-manager",
+            "participant_name": "Micro-Manager",
             "config_file_name": "precice-dummy-config.xml",
             "read_mesh_name": "macro-mesh",
             "read_data_name": "macro-data",
