--- a/macro-micro-dummy/micro-manager-dummy-config.json
+++ b/macro-micro-dummy/micro-manager-dummy-config.json
@@ -5,13 +5,13 @@
             "participant_name": "Micro-Manager",
             "config_file_name": "precice-dummy-config.xml",
             "read_mesh_name": "macro-mesh",
-            "read_data_name": {"macro-data":  0},
+            "read_data_name": {"macro-scalar-data": 0, "macro-vector-data": 1},
             "write_mesh_name": "macro-mesh",
-            "write_data_name": {"micro-data": 0}
+            "write_data_name": {"micro-scalar-data": 0, "micro-vector-data": 1}
     },
     "simulation_params": {
-      "macro_domain_bounds": [0.0, 1.0, 0.0, 1.0],
-      "total_time": 5.0,
+      "macro_domain_bounds": [0.0, 25.0, 0.0, 25.0, 0.0, 25.0],
+      "total_time": 10.0,
       "timestep": 1.0,
       "t_output": 1.0
     }
