--- a/micro-manager-config.json
+++ b/micro-manager-config.json
@@ -1,11 +1,10 @@
 {
-    "micro_file_name": "micro_sim/micro_heat_circular",
+    "micro_file_name": "micro_heat_circular",
     "coupling_params": {
             "participant_name": "Micro-Manager",
             "config_file_name": "precice-config.xml",
-            "write_mesh_name": "macro-mesh",
+            "macro_mesh_name": "macro-mesh",
             "write_data_name": {"k_00":  0, "k_01":  0, "k_10":  0, "k_11":  0, "porosity":  0},
-            "read_mesh_name": "macro-mesh",
             "read_data_name": {"temperature":  0}
     },
     "simulation_params": {
