Overhaul of case to fit the Micro Manager requirements (#7)
* Micro-problem API and guide in README

* Remove solution projection to coarse mesh step from mesh refinement

* [WIP] Generalizing data reading and writing in Micro Manager

* [WIP] Renaming variables and adding partial implementation of read write functionality

* [WIP] Removing matrix writing functionality and directly passing scalar components from micro simulation to micro manager

* Adding dummy macro and micro codes and further generalization of Micro Manager

* Micro Manager API with working dummy models

* [WIP] Adding functionality that Micro Manager can be pointed to correct micro problem script via config

* Pass Micro Manager config file as command line argument to micro-manager.py

* Point to correct micro config files

* Changing variable name in Micro Manager

* Add GitHub Action to run macro-micro-dummy case

* Working GitHub Action

* Micro Manager gets its own configuration tool

* Simplifying config tool of Micro Manager and adding configuration section in README

* Copy tools to working directory in dummy test Action

* Repair Action

* Spelling correction in dummy config script

* Spelling mistake in coupling scheme

* Make remeshing optional in micro problem

* Reverting to making Micro-Manager name configurable

* Removing unused code

* [WIP] Using dictionaries to handle data reading and writing in Micro Manager

* Moving from list of dicts to dict of lists as required in various settings

* Using correct dict of lists to create write_data in Micro Manager

* [WIP] API changes

* Add deleted file

* Checking input command and attributes read from config file

* Add assertion to check input parameters

* Adding vector data handling to Micro Manager and also dummy

* Removing the micro-manager and all code related to it

* Adjustments according to changes in micro-manager

* Simplifying file structure and hard-coding stu

--- a/micro-manager-config.json
+++ b/micro-manager-config.json
@@ -1,17 +1,13 @@
 {
-    "coupling_on": true,
+    "micro_file_name": "micro_heat",
     "coupling_params": {
-            "participant_name": "Micro-manager",
+            "participant_name": "Micro-Manager",
             "config_file_name": "precice-config.xml",
-            "write_mesh_name": "macro-mesh",
-            "write_data_name": ["k_00", "k_01", "k_10", "k_11", "porosity"],
-            "read_mesh_name": "macro-mesh",
-            "read_data_name": ["temperature"]
+            "macro_mesh_name": "macro-mesh",
+            "write_data_names": {"k_00":  "scalar", "k_01":  "scalar", "k_10":  "scalar", "k_11":  "scalar", "porosity":  "scalar"},
+            "read_data_names": {"temperature":  "scalar"}
     },
     "simulation_params": {
-      "macro_domain_bounds": [0.0, 1.0, 0.0, 1.0],
-      "total_time": 0.002,
-      "timestep": 0.001,
-      "t_output": 0.001
+      "macro_domain_bounds": [0.0, 1.0, 0.0, 1.0]
     }
   }
