--- a/micro-manager-config.json
+++ b/micro-manager-config.json
@@ -4,10 +4,15 @@
             "participant_name": "Micro-Manager",
             "config_file_name": "precice-config.xml",
             "macro_mesh_name": "macro-mesh",
-            "write_data_names": {"k_00":  "scalar", "k_01":  "scalar", "k_10":  "scalar", "k_11":  "scalar", "porosity":  "scalar"},
-            "read_data_names": {"concentration":  "scalar"}
+            "write_data_names": {"k_00": "scalar", "k_01": "scalar", "k_10": "scalar", "k_11": "scalar", "porosity": "scalar"},
+            "read_data_names": {"concentration": "scalar"}
     },
     "simulation_params": {
-      "macro_domain_bounds": [0.0, 8.0, 0.0, 4.0]
+      "macro_domain_bounds": [0.0, 8.0, 0.0, 4.0],
+      "micro_output_n": 5
+    },
+    "diagnostics": {
+      "data_from_micro_sims": {"micro_mesh_size": "scalar"},
+      "output_micro_sim_solve_time": "True"
     }
-  }
+}
