--- a/micro-manager-config.json
+++ b/micro-manager-config.json
@@ -8,8 +8,7 @@
             "read_data_names": {"concentration": "scalar"}
     },
     "simulation_params": {
-      "macro_domain_bounds": [0.0, 8.0, 0.0, 4.0],
-      "micro_output_n": 5
+      "macro_domain_bounds": [0.0, 8.0, 0.0, 4.0]
     },
     "diagnostics": {
       "data_from_micro_sims": {"micro_mesh_size": "scalar"},
