Dynamic Aikten acceleration setting

--- a/.gitignore
+++ b/.gitignore
@@ -135,11 +135,10 @@ micro-sims/*.vtk
 # preCICE files
 *-events.json
 
-<<<<<<< HEAD
-# PyCharm stuff
-.idea/
-=======
 # PyCharm files
 .idea/
 bin/
->>>>>>> main
+
+# SLURM output files
+*.err
+*.out
