--- a/micro-manager-config.json
+++ b/micro-manager-config.json
@@ -4,10 +4,13 @@
             "participant_name": "Micro-Manager",
             "config_file_name": "precice-config.xml",
             "macro_mesh_name": "macro-mesh",
-            "write_data_names": {"k_00":  "scalar", "k_01":  "scalar", "k_10":  "scalar", "k_11":  "scalar", "porosity":  "scalar"},
-            "read_data_names": {"temperature":  "scalar"}
+            "write_data_names": {"k_00": "scalar", "k_01": "scalar", "k_10": "scalar", "k_11": "scalar", "porosity": "scalar"},
+            "read_data_names": {"concentration": "scalar"}
     },
     "simulation_params": {
-      "macro_domain_bounds": [0.0, 1.0, 0.0, 1.0]
+      "macro_domain_bounds": [0.0, 1.0, 0.0, 0.5]
+    },
+    "diagnostics": {
+      "data_from_micro_sims": {"grain_size": "scalar"}
     }
-  }
+}
