--- a/micro-manager-config.json
+++ b/micro-manager-config.json
@@ -9,6 +9,7 @@
     },
     "simulation_params": {
       "macro_domain_bounds": [0.0, 1.0, 0.0, 0.5],
+      "axiswise_ranks": [4, 2],
       "adaptivity": "True",
       "adaptivity_data": ["k_00", "k_11", "porosity", "concentration"],
       "adaptivity_history_param": 0.1,
