--- a/micro-manager-config.json
+++ b/micro-manager-config.json
@@ -10,13 +10,15 @@
     "simulation_params": {
       "macro_domain_bounds": [0.0, 1.0, 0.0, 0.5],
       "axiswise_ranks": [4, 2],
-      "adaptivity": "True",
-      "adaptivity_type": "local",
-      "adaptivity_data": ["k_00", "k_11", "porosity", "concentration"],
-      "adaptivity_history_param": 0.1,
-      "adaptivity_coarsening_constant": 0.2,
-      "adaptivity_refining_constant": 0.2,
-      "adaptivity_every_implicit_iteration": "False"
+      "adaptivity": {
+        "type": "local",
+        "data": ["k_00", "k_11", "porosity", "concentration"],
+        "history_param": 0.1,
+        "coarsening_constant": 0.2,
+        "refining_constant": 0.2,
+        "every_implicit_iteration": "False",
+        "similarity_measure": "L2rel"
+      }
     },
     "diagnostics": {
       "data_from_micro_sims": {"grain_size": "scalar"}
